minitrace-macro/tests/ui/err/properties-non-string.rs
use minitrace::trace;

#[trace(properties = { a: "b" })]
fn f() {}

fn main() {}
